Fix recent blocks popup overflow

--- a/idea/frontend/src/features/recentBlocks/ui/RecentBlocks.module.scss
+++ b/idea/frontend/src/features/recentBlocks/ui/RecentBlocks.module.scss
@@ -86,7 +86,7 @@
   left: toRem(-101.5);
   width: toRem(500);
   padding: toRem(12) toRem(12) toRem(24) toRem(24);
-  z-index: 1;
+  z-index: 2;
 
   &.open {
     border: $border ui.$borderModalColor;
